# note

./: .gitignore  .tmp.md.swp  README.md  bash.md  bem.md  django.md  docker.md  git.md  gmail.md  graphql.md  kubernetes.md  mkdocs.yml  netlify.toml  postgres.md  pyproject.toml  python.md  spark.md  unittest.md  vim.md
docs/: index.md
docs/ml/: community.md  datasets.md  losses.md  misc.md  models.md  optimizers.md  templates.md
docs/notes/: accents.md  dvc.md  git.md  google-takeout.md  graphql.md  jupyter.md  kubernetes.md  npm.md  redwood.md  scan.md  ssh.md  svg.md  timeseries.md  tmp.md  vim.md
