[tool.poetry]
name = "note"
version = "0.1.0"
description = "Cheatsheets for everyday"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
